--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,10 +26,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    if (project.android.hasProperty("namespace")) {
-        namespace 'com.flutter.moum.screenshot_callback'
-    }
     compileSdkVersion 33
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
 
     defaultConfig {
         minSdkVersion 21
@@ -38,6 +40,8 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+
+    namespace 'com.flutter.moum.screenshot_callback'
 }
 
 dependencies {
